[package]
name = "furtif-core"
version = "0.1.1"
edition = "2021"
authors = ["Frederic Dambreville", "Jean Dezert"]
license = "LGPL-3.0"
description = "Flexible User-oriented Rusted Toolbox for Information Fusion: a data fusion toolbox based on asynchronous and interacting processes, particularly focused on belief functions fusion"
keywords = ["fusion", "belief", "function"]
repository = "https://github.com/fdecode/silx-furtif"
readme = "README.md"
categories = ["toolbox"]

[dependencies]
rand = "^0.8.5"
rand_distr = "^0.4.3"
serde = { version = "^1.0.197", optional = true, features = ["derive",] }
rkyv = { version = "^0.7.44", optional = true, features = ["uuid", "validation",]}

hashed-type-def = { version = "0.1.1", features = ["derive"], path = "../hashed-type-def" }
silx-types = { version = "0.1.1", optional = true, path = "../silx-types" }

[features]
default = ["silx"]
silx = ["silx-types", "serde", "rkyv"]
verbose1 = []
verbose2 = ["verbose1"]
verbose3 = ["verbose2"]
verbose4 = ["verbose3"]