[package]
name = "furtif-examples"
version = "0.1.2"
edition = "2021"
authors = ["Frederic Dambreville", "Jean Dezert"]
license = "LGPL-3.0"
description = "Flexible User-oriented Rusted Toolbox for Information Fusion: a data fusion toolbox based on asynchronous and interacting processes, particularly focused on belief functions fusion"
keywords = ["fusion", "belief function"]
repository = "https://github.com/fdecode/silx-furtif"
readme = "README.md"
categories = ["toolbox"]

[dependencies]
tokio = { version = "^1.36.0", features = ["full"]}
serde = { version = "^1.0.197", features = ["derive",]}
serde_yaml = "^0.9.32"
serde_json = "^1.0.114"
typetag = "^0.2.16"

silx-core = { version = "0.1.2", path = "../silx-core" }
silx-types = { version = "0.1.2", path = "../silx-types" }
furtif-core = { version = "0.1.2", path = "../furtif-core" }
