[package]
name = "silx-core"
version = "0.1.1"
edition = "2021"
authors = ["Frederic Dambreville"]
license = "Apache-2.0"
description = "aSynchronous Interactive calcuLation eXecutor: an easy to use executor for asynchronous and interacting processes"
keywords = ["asynchrone", "multiprocess", "executor"]
repository = "https://github.com/fdecode/silx-furtif"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
tokio = { version = "^1.36.0", features = ["full"]}
async-channel = "^2.2.0"
serde = { version = "^1.0.197", features = ["derive",]}
serde_yaml = "^0.9.32"
fnv = "^1.0.7"
rkyv = "^0.7.44"
uuid = { version = "^1.7.0", features = ["serde"] }
typetag = "^0.2.15"
slab = "^0.4.9"
num_enum = "^0.7.2"
pin-utils = "^0.1.0"
const-str = { version = "^0.5.6", features = ["proc"] }
unstringify = "^0.1.4"
async-scoped = { version = "^0.9.0", features = ["use-tokio"] }

hashed-type-def = { version = "0.1.1", features = ["derive"], path = "../hashed-type-def" }

[features]
default = ["verbose4"]
verbose1 = []
verbose2 = ["verbose1"]
verbose3 = ["verbose2"]
verbose4 = ["verbose3"]
